fixed some width issues on smallest devices, removed that ugly first-character thing

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1030,17 +1030,12 @@ a:hover {
     font-size: 16px;
   }
 
-  .blog-post-item-date {
-    h2 {
-      width:50%;
-    }
-  }
+  .blog-post-item-summary {
+    width: 100%;
+}
 
   .blog-post-item-summary {
     justify-content:unset;
-    h2 {
-      width:50%;
-    }
   }
 
   .title-section__inner-container {
