--- a/src/pages/templates/styling/post.scss
+++ b/src/pages/templates/styling/post.scss
@@ -98,10 +98,6 @@ $blur: 30px;
     border-radius: 5px;
     margin-bottom:25px;
   }
-  h3:first-child:first-letter  {
-    font-family: Georgia;
-    font-size: 25px;
-  }
   li {
     text-align:left;
     padding-left: 10px;
